<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/class_header">

        <EditTextPreference
            app:key="class"
            app:title="@string/class_title"
            app:useSimpleSummaryProvider="true"
            app:summary="@string/class_summary"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/courses_header">

        <SwitchPreferenceCompat
            app:key="hasCourses"
            app:title="@string/hasCourses_title"
            app:summary="@string/hasCourses_summary" />

        <EditTextPreference
            app:key="chosenCourses"
            app:title="@string/courses_title"
            app:summary="@string/courses_summary"
            app:dependency="hasCourses"/>


    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
